--- a/public/src/style.css
+++ b/public/src/style.css
@@ -4,13 +4,13 @@ body {
   padding: 0;
 }
 
-section a {
-  text-decoration: none;
-  color: black;
+.stickFont {
+  font-family: 'Stick', sans-serif;
 }
-section a:hover {
-  text-decoration: none;
-  color: black;
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 nav a {
@@ -28,9 +28,36 @@ nav li > a {
 }
 
 section {
-  margin-top: 5%;
+  margin-top: 4%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.stickFont {
-  font-family: 'Stick', sans-serif;
+.card {
+  text-decoration: none;
+  color: black;
+  margin: 1.5%;
+}
+
+.card a {
+  text-decoration: none;
+  color: black;
+}
+.card a:hover {
+  text-decoration: none;
+  color: black;
+}
+.cardFooter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.cardFooter a {
+  color: #00917c;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.cardFooter a:hover {
+  color: #025955;
 }
