--- a/public/src/style.css
+++ b/public/src/style.css
@@ -60,7 +60,7 @@ section {
   flex-direction: row;
   justify-content: space-between;
 }
-.cardFooter > button {
+.cardFooter > a {
   color: #00917c;
   text-transform: uppercase;
   font-weight: bold;
