responsive nav-bar for mobile

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -71,3 +71,10 @@ section {
   width: 500px;
   color: white;
 }
+
+@media (max-width: 480px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+}
