mongodb schema for User

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -142,3 +142,8 @@ section {
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+
+/* admin page */
+#admin-section {
+  width: 250px;
+}
