--- a/public/src/style.css
+++ b/public/src/style.css
@@ -76,6 +76,9 @@ section {
 .btn-red {
   color: #b91646 !important;
 }
+.btn-greed {
+  color: #49ff00 !important;
+}
 
 .btn-copy {
   color: #146356 !important;
