admin panel db and trash button state switching mvp

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -174,13 +174,16 @@ section {
   padding: 10px;
 }
 .admin-control-panel a {
+  color: inherit;
   padding-left: 25px;
   cursor: pointer;
+  text-decoration: none;
 }
+
 .admin-control-panel a span {
   margin-right: 7px;
 }
 
-.admin-panel-active-btn {
+.adminPanelActiveBtn {
   color: #fff323 !important;
 }
