bug: main card green button fix

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -78,8 +78,8 @@ section {
 .btn-red {
   color: #b91646 !important;
 }
-.btn-greed {
-  color: #49ff00 !important;
+.btn-green {
+  color: #00917c !important;
 }
 
 .btn-copy {
